starter-code/shared/lib.h

typedef __builtin_va_list va_list;
typedef unsigned long size_t;         // sizes and offsets
typedef long off_t;
typedef int pid_t;                    // process IDs
void* memcpy(void* dst, const void* src, size_t n);
void* memmove(void* dst, const void* src, size_t n);
void* memset(void* s, int c, size_t n);
size_t strlen(const char* s);
size_t strnlen(const char* s, size_t maxlen);
char* strcpy(char* dst, const char* src);
#define RAND_MAX 0x7FFFFFFF
// System call numbers: an application calls `int NUM` to call a system call

#define INT_SYS                 48
#define INT_SYS_PANIC           (INT_SYS + 0)
#define INT_SYS_GETPID          (INT_SYS + 1)
#define INT_SYS_YIELD           (INT_SYS + 2)
#define INT_SYS_PAGE_ALLOC      (INT_SYS + 3)
#define INT_SYS_FORK            (INT_SYS + 4)
#define INT_SYS_EXIT            (INT_SYS + 5)
#define INT_SYS_MAPPING         (INT_SYS + 6)
#define INT_SYS_MEM_TOG         (INT_SYS + 8)
#define INT_SYS_BRK             (INT_SYS + 9)
#define INT_SYS_SBRK            (INT_SYS + 10)
#define CONSOLE_COLUMNS 80
#define CONSOLE_ROWS    25